2002-08-06  Roland McGrath  <roland@frob.com>

	* proxy-defpager.c: Rename all the server functions with S_ prefix.
	Include "default_pager_U.h" for client stub prototypes.
	* Makefile (default_pager-MIGCOMSFLAGS): New variable, give -prefix S_.
	(OBJS): Add default_pagerUser.o here.
	(proxy-defpager): Depend on it.

2002-08-05  Marcus Brinkmann <marcus@gnu.org>

	* proxy-defpager.c (allowed): Check CRED, not PORT.
	(default_pager_info): Use real_defpager, not DEFAULT_PAGER.
	(proxy_defpager_demuxer): New demuxer.
	(main): Use it.

2002-06-14  Roland McGrath  <roland@frob.com>

	* proxy-defpager.c: New file.
	* Makefile (targets, SRCS): Add it.
	(proxy-defpager): New target.
	(OBJS): Add default_pagerServer.o here.

2002-06-21  Roland McGrath  <roland@frob.com>

	* streamio.c (parse_opt): Fix fencepost error in -n arg parsing.
	Reported by Nicola Girardi <nicola@g-n-u.de>.

2002-06-20  Roland McGrath  <roland@frob.com>

	* firmlink.c (trivfs_S_io_read): Fix pointer arithmetic.
	Reported by Nicola Girardi <nicola@g-n-u.de>.

2002-06-15  Roland McGrath  <roland@frob.com>

	* magic.c (trivfs_S_dir_readdir): u_int -> size_t

2002-06-13  Roland McGrath  <roland@frob.com>

	* firmlink.c (trivfs_S_io_read): Fix type of DATA argument.
	* streamio.c (trivfs_S_io_read): Likewise.
	(trivfs_S_io_write): Likewise.
	* hello.c (trivfs_S_io_read): Likewise.
	* hello-mt.c (trivfs_S_io_read): Likewise.
	* null.c (trivfs_S_io_read): Likewise.
	(trivfs_S_io_write): Likewise.
	(trivfs_S_file_set_size): Add reply port args.

	* hello.c (trivfs_S_io_read): off_t -> loff_t
	* hello-mt.c (trivfs_S_io_read): Likewise.
	* streamio.c (trivfs_S_io_read, trivfs_S_io_write): Likewise.
	(trivfs_S_file_sync): Add missing arg.

	* new-fifo.c (trivfs_S_io_map): Add reply port args.
	(trivfs_S_io_select): Remove bogus last arg.

	* fifo.c (trivfs_S_io_map): Add reply port args.
	(trivfs_S_io_select): Remove bogus last arg.

	* null.c (trivfs_S_io_map): Add reply port args.